tests/main_tests/panicfmt_ui_tests/concat_panic_not_panicfmt_arg-err.rs
struct NotFmt;


const _: () = const_panic::concat_panic!(NotFmt);

fn main() {}